[!] RF to List.of()